# QuadSYSspline

./: CMakeLists.txt
cmake/: FindBoost.cmake
include/: quadSYSspline.h
src/: quadSYSspline.cpp
